# aeron-python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  aeronmodule.pyi  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  python-package.yml
examples/: basic_publisher.py  basic_subscriber.py  mdc_publisher.py  mdc_subscriber.py
src/aeron/: BasicPublisher.c  BasicPublisher.h  BasicSubscriber.c  BasicSubscriber.h  __init__.py  __init__.pyi  aeronmodule.c  concurrent.py  configuration.h  exceptions.c  exceptions.h
src/aeron/aeron/: aeronmodule.c
