[metadata]
name = aeron
version = 0.2.0
url = https://github.com/RoboTradeCode/aeron-python
download_url = https://github.com/RoboTradeCode/aeron-python
project_urls =
    Source = https://github.com/RoboTradeCode/aeron-python
    Tracker = https://github.com/RoboTradeCode/aeron-python/issues
author = nomnoms12
author_email = alexander.ign0918@gmail.com
maintainer = nomnoms12
maintainer_email = alexander.ign0918@gmail.com
classifiers =
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: System :: Networking
license = Proprietary
description = Efficient reliable UDP unicast, UDP multicast, and IPC message transport
long_description = file: README.md
long_description_content_type = text/markdown
keywords = aeron
platforms = Linux

[options]
python_requires = >=3.8
include_package_data = True
packages = aeron
package_dir =
    = src
